fixed font size and line spacing

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -31,6 +31,4 @@ h4 {
 p {
     font-family: open-sans-light;
     font-weight: lighter;
-    font-size: 1em;
-    line-height: 1.5em;
 }
